--- a/app/index.html
+++ b/app/index.html
@@ -37,60 +37,53 @@
     <div class="header__top-nav">
       <div class="container">
         <div class="row">
-         <div class="col-md-3 col-sm-6">
+         <div class="col-md-2 col-sm-6">
            <div class="header__logo">
              <a href="index.html"><img src="images/logo.png" alt=""></a>
            </div>
          </div>
-         <div class="col-md-6">
+         <div class="col-md-8">
            <div class="header__menu-nav">
             <ul class="menu">
-              <li><a href=#>Menu 1</a>
+              <li><a href="#">Онас</a>
                 <ul class="submenu">
-                  <li><a href=#>Sudmenu 1</a></li>
-                  <li><a href=#>Sudmenu 1</a></li>
-                  <li><a href=#>Sudmenu 1</a></li>
+                  <li><a href=#>Lorem.</a></li>
+                  <li><a href=#>Lorem.</a></li>
+                  <li><a href=#>Lorem.</a></li>
                 </ul>
               </li>
-              <li><a href=#>Menu 2</a>
+              <li><a href="#">Услуги</a>
                 <ul class="submenu">
                   <li><a href=#>Sudmenu 2</a></li>
                   <li><a href=#>Sudmenu 2</a></li>
                   <li><a href=#>Sudmenu 2</a></li>
                 </ul>
               </li>
-              <li><a href=#>Menu 3</a>
+              <li><a href="#">Портфолио</a>
                 <ul class="submenu">
-                  <li><a href=#>Sudmenu 3</a></li>
-                  <li><a href=#>Sudmenu 3</a></li>
-                  <li><a href=#>Sudmenu 3</a></li>
+                  <li><a href=#>Lorem.</a></li>
+                  <li><a href=#>Lorem.</a></li>
+                  <li><a href=#>Lorem.</a></li>
                 </ul>
               </li>
-              <li><a href=#>Menu 4</a>
+              <li><a href="#">Блог</a>
                 <ul class="submenu">
-                  <li><a href=#>Sudmenu 4</a></li>
-                  <li><a href=#>Sudmenu 4</a></li>
-                  <li><a href=#>Sudmenu 4</a></li>
+                  <li><a href=#>Lorem.</a></li>
+                  <li><a href=#>Lorem.</a></li>
+                  <li><a href=#>Lorem.</a></li>
                 </ul>
               </li>
-              <li><a href=#>Menu 5</a>
+              <li><a href="#">Контакты</a>
                 <ul class="submenu">
-                  <li><a href=#>Sudmenu 5</a></li>
-                  <li><a href=#>Sudmenu 5</a></li>
-                  <li><a href=#>Sudmenu 5</a></li>
+                  <li><a href=#>Lorem.</a></li>
+                  <li><a href=#>Lorem.</a></li>
+                  <li><a href=#>Lorem.</a></li>
                 </ul>
               </li>
             </ul>
-            <!-- <ul>
-              <li><a href="#">Онас</a></li>
-              <li><a href="#">Услуги</a></li>
-              <li><a href="#">Портфолио</a></li>
-              <li><a href="#">Блог</a></li>
-              <li><a href="#">Контакты</a></li>
-            </ul> -->
           </div>
         </div>
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-2 col-sm-6">
          <div class="header__phone">
            <a href="tel:8129383779"><i class="fa fa-mobile"></i>(812) 938-37-79</a>
          </div>
