--- a/app/blog.html
+++ b/app/blog.html
@@ -119,16 +119,16 @@
           <input type="hidden" name="cd-dropdown">
           <ul class="dropdown-list">
             <li data-value="1">
-              <span>India</span>
+              <span></span>
             </li>
             <li data-value="2">
-              <span>Sri Lanka</span>
+              <span></span>
             </li>
             <li data-value="3">
-              <span>Nepal</span>
+              <span></span>
             </li>
             <li data-value="4">
-              <span>Bangladesh</span>
+              <span></span>
             </li>
           </ul>
         </div>
