--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <li><a target="_blank" href="dist/index.html">Главная</a></li>
     <li><a target="_blank" href="dist/contacts.html">Контакты</a></li>
     <li><a target="_blank" href="dist/blog.html">Блог</a></li>
-    <li><a target="_blank" href="dist/404.html">Блог</a></li>
+    <li><a target="_blank" href="dist/404.html">404</a></li>
   </ol>
 </div>
 </body>
