--- a/app/contacts.html
+++ b/app/contacts.html
@@ -45,13 +45,7 @@
          <div class="col-md-8">
            <div class="header__menu-nav">
             <ul class="menu">
-              <li><a href="#">Онас</a>
-                <ul class="submenu">
-                  <li><a href=#>Lorem.</a></li>
-                  <li><a href=#>Lorem.</a></li>
-                  <li><a href=#>Lorem.</a></li>
-                </ul>
-              </li>
+              <li><a href="#">Онас</a></li>
               <li><a href="#">Услуги</a>
                 <ul class="submenu">
                   <li><a href=#>Sudmenu 2</a></li>
@@ -59,27 +53,9 @@
                   <li><a href=#>Sudmenu 2</a></li>
                 </ul>
               </li>
-              <li><a href="#">Портфолио</a>
-                <ul class="submenu">
-                  <li><a href=#>Lorem.</a></li>
-                  <li><a href=#>Lorem.</a></li>
-                  <li><a href=#>Lorem.</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Блог</a>
-                <ul class="submenu">
-                  <li><a href=#>Lorem.</a></li>
-                  <li><a href=#>Lorem.</a></li>
-                  <li><a href=#>Lorem.</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Контакты</a>
-                <ul class="submenu">
-                  <li><a href=#>Lorem.</a></li>
-                  <li><a href=#>Lorem.</a></li>
-                  <li><a href=#>Lorem.</a></li>
-                </ul>
-              </li>
+              <li><a href="#">Портфолио</a></li>
+              <li><a href="#">Блог</a></li>
+              <li><a href="#">Контакты</a></li>
             </ul>
           </div>
         </div>
@@ -109,10 +85,10 @@
           <p>Мы будем рады ответить на ваши вопросы и бесплатно проконсультируем.</p>
           <ul>
             <li><i class="fa fa-map-marker"></i> Адрес: г.Москва ул.Кожевническая 10с1</li>
-            <li><i class="fa fa-mobile"></i> Телефон: (812) 938-37-79</li>
-            <li><i class="fa fa-envelope-o"></i> Email: hello@interface.ru</li>
-            <li><i class="fa fa-paper-plane-o"></i> Telegram: (812) 938-37-79</li>
-            <li><i class="fa fa-skype"></i> Skype: Interface.ru</li>
+            <li><i class="fa fa-mobile"></i> <a href="tel:8129383779">Телефон: (812) 938-37-79</a></li>
+            <li><i class="fa fa-envelope-o"></i> <a href="mailto:hello@interface.ru">Email: hello@interface.ru</a></li>
+            <li><i class="fa fa-paper-plane-o"></i> <a href="tel:8129383779">Telegram: (812) 938-37-79</a></li>
+            <li><i class="fa fa-skype"></i> <a href="mailto:Interface.ru">Skype: Interface.ru</a></li>
             <li><i class="fa fa-clock-o"></i> Время работы: Пн-Пт 08.00-18.00</li>
           </ul>
         </div>
@@ -135,6 +111,11 @@
               <div class="input">
                 <input type="text" placeholder="Телефон" required />
                 <span><i class="fa fa-mobile"></i></span>
+              </div>
+
+              <div class="input">
+                <textarea name="" id="" placeholder="Хочу получить консультацию"></textarea>
+                <span><i class="fa fa-comment-o"></i></span>
               </div>
 
               <button type="submit" class="submit">Отправить</button>
@@ -163,7 +144,7 @@
     <div class="row">
       <div class="col-md-2">
         <div class="footer__logo">
-          <img src="images/footer__logo.png" alt="">
+          <a href="#"><img src="images/footer__logo.png" alt=""></a>
         </div>        
       </div>
       <div class="col-md-6">
