--- a/app/404.html
+++ b/app/404.html
@@ -118,7 +118,7 @@
     <div class="row">
       <div class="col-md-2">
         <div class="footer__logo">
-          <img src="images/footer__logo.png" alt="">
+          <a href="#"><img src="images/footer__logo.png" alt=""></a>
         </div>        
       </div>
       <div class="col-md-6">
