--- a/app/blog.html
+++ b/app/blog.html
@@ -97,6 +97,7 @@
 <div class="blog">
   <div class="container">
     <div class="caption-wrap">
+      <h2 class="caption">Блог InterFace</h2>
       <ul>
         <li><a href="index.html">Главная</a></li>
         <li><a href="blog.html">Блог</a></li>
@@ -266,7 +267,7 @@
     <div class="row">
       <div class="col-md-2">
         <div class="footer__logo">
-          <img src="images/footer__logo.png" alt="">
+          <a href="#"><img src="images/footer__logo.png" alt=""></a>
         </div>        
       </div>
       <div class="col-md-6">
