--- a/app/index.html
+++ b/app/index.html
@@ -117,23 +117,23 @@
     <div class="item thirdslide" style="background-image: url('images/slider3.jpg');">
       <div class="container">
         <div class="row">
-           <div class="col-md-5 col-md-push-7">
-            <div class="header__img-wrap">
-              <img src="images/slider_img3.png" alt="">
-            </div>
-          </div> 
-          <div class="col-md-7 col-md-pull-5">
-            <ul>
-              <li>Разрабатываем сайты, </li>
-              <li>Занимаемся комплексным продвижением,</li>
-              <li>Занимаемся поддержкой и развитием.</li>
-              <a href="#">подробнее</a>
-            </ul>
-          </div>                  
-        </div>
+         <div class="col-md-5 col-md-push-7">
+          <div class="header__img-wrap">
+            <img src="images/slider_img3.png" alt="">
+          </div>
+        </div> 
+        <div class="col-md-7 col-md-pull-5">
+          <ul>
+            <li>Разрабатываем сайты, </li>
+            <li>Занимаемся комплексным продвижением,</li>
+            <li>Занимаемся поддержкой и развитием.</li>
+            <a href="#">подробнее</a>
+          </ul>
+        </div>                  
       </div>
     </div>
   </div>
+</div>
 </div>
 </div>
 <!-- header end -->
@@ -359,54 +359,60 @@
       <div class="lst-project__img-wrap">
         <img src="images/last_pr1.png" alt="">
       </div>
+      <div class="lst-project__hidden-block">
+        <p>ALFA</p>
+        <p>Стоматология</p>
+      </div>
     </a>          
     <a href="#" class="item">
       <div class="lst-project__img-wrap">
         <img src="images/last_pr2.png" alt="">
       </div>
-    </a>   
-    <a href="#" class="item">
-      <div class="lst-project__img-wrap">
-        <img src="images/last_pr3.png" alt="">
-      </div>
-    </a>   
-   <!--  <a href="#" class="item">
-      <div class="lst-project__img-wrap lst-project__img-wrap--img-wrap">
-        <p>Parfum-Optom.com</p>
+      <div class="lst-project__hidden-block">
+        <p>ПРОМТЕХГАЗ</p>
         <p>seo продвижение</p>
       </div>
-    </a>  -->
-    <a href="#" class="item">
-      <div class="lst-project__img-wrap">
-        <img src="images/last_pr1.png" alt="">
-      </div>
-    </a>          
-    <a href="#" class="item">
-      <div class="lst-project__img-wrap">
-        <img src="images/last_pr2.png" alt="">
-      </div>
     </a>   
     <a href="#" class="item">
       <div class="lst-project__img-wrap">
         <img src="images/last_pr3.png" alt="">
       </div>
-    </a>   
-    <a href="#" class="item">
-      <div class="lst-project__img-wrap">
-        <img src="images/last_pr1.png" alt="">
-      </div>
-    </a>          
-    <a href="#" class="item">
-      <div class="lst-project__img-wrap">
-        <img src="images/last_pr2.png" alt="">
-      </div>
-    </a>   
-    <a href="#" class="item">
-      <div class="lst-project__img-wrap">
-        <img src="images/last_pr3.png" alt="">
-      </div>
-    </a>         
-  </div>
+      <div class="lst-project__hidden-block">
+       <p>Parfum-Optom.com</p>
+       <p>seo продвижение</p>
+     </div>
+   </a>   
+   <a href="#" class="item">
+    <div class="lst-project__img-wrap">
+      <img src="images/last_pr1.png" alt="">
+    </div>
+  </a>          
+  <a href="#" class="item">
+    <div class="lst-project__img-wrap">
+      <img src="images/last_pr2.png" alt="">
+    </div>
+  </a>   
+  <a href="#" class="item">
+    <div class="lst-project__img-wrap">
+      <img src="images/last_pr3.png" alt="">
+    </div>
+  </a>   
+  <a href="#" class="item">
+    <div class="lst-project__img-wrap">
+      <img src="images/last_pr1.png" alt="">
+    </div>
+  </a>          
+  <a href="#" class="item">
+    <div class="lst-project__img-wrap">
+      <img src="images/last_pr2.png" alt="">
+    </div>
+  </a>   
+  <a href="#" class="item">
+    <div class="lst-project__img-wrap">
+      <img src="images/last_pr3.png" alt="">
+    </div>
+  </a>         
+</div>
 </div>
 </div>
 <!-- last projects end -->
