--- a/app/dev.html
+++ b/app/dev.html
@@ -189,7 +189,59 @@
 </div>
 </div>
 <div class="dev__cycle">
-  
+  <div class="row">
+    <div class="col-md-4">
+      <div class="dev__step">
+        <div class="dev__wrap">
+          <i class="icon-dev1"></i>
+          <h2>Создание сайтов</h2>
+        </div>
+        <p>Запуск совершенного нового магазина. Перевод <br> офлайн-ритейла в онлайн.</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="dev__step">
+        <div class="dev__wrap">          
+          <i class="icon-dev2"></i>
+          <h2>Поддержка и развитие</h2>
+        </div>
+        <p>Внедрение новых интерфейсных и технологических решений. <br> Поддержка периодических <br> процессов</p>
+      </div>      
+    </div>
+    <div class="col-md-4">
+     <div class="dev__step dev__step--bg-arrow">
+       <div class="dev__wrap">
+        <i class="icon-dev3"></i>
+        <h2>Подключение и настройка 
+        веб-аналитики.</h2>
+      </div>
+      <p>Возможность комплексной <br> веб-аналитики по каждому из направлений работы является <br> одним из ключевых преимуществ интернет-маркетинга. </p>
+    </div>
+  </div>
+</div>
+<div class="dev__etaps">
+  <span>запуск</span>
+  <span>сталкновление <br> с реальностью</span> 
+  <span>коррекция</span>
+  <span>Вариант жизненного <br> цикла веб сайта</span>
+</div>
+</div>
+<div class="dev__desc">
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+<div class="dev__create">
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Создание сайтов под ключ.</h2>
+      <div class="dev__img-wrap">
+        <img src="images/dev4.jpg" alt="">
+      </div>
+    </div>
+    <div class="col-md-3"></div>
+    <div class="col-md-3"></div>
+  </div>
 </div>
 </div>
 </div>
