--- a/app/index.html
+++ b/app/index.html
@@ -193,52 +193,49 @@
 <!-- sevices start -->
 <div class="services">
   <div class="container">
-    <div class="row">
-      <div class="caption-wrap">
-       <h2 class="caption">Наши услуги</h2>
-     </div>
+   <div class="caption-wrap">
+     <h2 class="caption">Наши услуги</h2>
    </div>
-   <!-- <div class="row"> -->
-     <div class="col-md-3 col-sm-6 no-padding">  
-      <a href="#" class="services__block-wrap">
-       <div class="services__block">
-         <div class="services__img-wrap">
-           <div class="services__img">
-            <i class="icon-serv1"></i>
-          </div>
-          <div class="services__img-desc">
-           <p>Разработка <br> сайтов</p>
-         </div>
-       </div>
-     </div>  
-   </a>
-   <a href="#" class="services__block-wrap">
+   <div class="col-md-3 col-sm-6 no-padding">  
+    <a href="#" class="services__block-wrap">
      <div class="services__block">
        <div class="services__img-wrap">
          <div class="services__img">
-          <i class="icon-serv5"></i>
+          <i class="icon-serv1"></i>
         </div>
         <div class="services__img-desc">
-         <p>Создание <br> сайтов</p>
+         <p>Разработка <br> сайтов</p>
        </div>
      </div>
-   </div> 
+   </div>  
  </a>
  <a href="#" class="services__block-wrap">
    <div class="services__block">
      <div class="services__img-wrap">
-      <div class="services__img">
-       <i class="icon-serv9"></i>
+       <div class="services__img">
+        <i class="icon-serv5"></i>
+      </div>
+      <div class="services__img-desc">
+       <p>Создание <br> сайтов</p>
      </div>
-     <div class="services__img-desc">
-      <p>Поддержка и <br> сопровождение <br> сайтов</p>
-    </div>
+   </div>
+ </div> 
+</a>
+<a href="#" class="services__block-wrap">
+  <div class="services__block">
+   <div class="services__img-wrap">
+    <div class="services__img">
+     <i class="icon-serv9"></i>
+   </div>
+   <div class="services__img-desc">
+    <p>Поддержка и <br> сопровождение <br> сайтов</p>
   </div>
+</div>
 </div>
 </a>
 <a href="" class="services__block-wrap">
- <div class="services__block">
-  <div class="services__img-wrap">
+  <div class="services__block">
+   <div class="services__img-wrap">
     <div class="services__img">
      <i class="icon-serv13"></i>
    </div>
@@ -250,7 +247,7 @@
 </a>
 </div>
 <div class="col-md-3 col-sm-6 no-padding">
- <a href="#" class="services__block-wrap">
+  <a href="#" class="services__block-wrap">
    <div class="services__block">
      <div class="services__img-wrap">
        <div class="services__img">
@@ -263,7 +260,7 @@
  </div> 
 </a>
 <a href="#" class="services__block-wrap">
- <div class="services__block">
+  <div class="services__block">
    <div class="services__img-wrap">
      <div class="services__img">
       <i class="icon-serv6"></i>
@@ -275,7 +272,7 @@
 </div>  
 </a>
 <a href="#" class="services__block-wrap">
- <div class="services__block">
+  <div class="services__block">
    <div class="services__img-wrap">
      <div class="services__img">
       <i class="icon-serv10"></i>
@@ -287,7 +284,7 @@
 </div>
 </a>
 <a href="#" class="services__block-wrap">
- <div class="services__block">
+  <div class="services__block">
    <div class="services__img-wrap">
      <div class="services__img">
       <i class="icon-serv14"></i>
@@ -300,20 +297,20 @@
 </a>
 </div>
 <div class="col-md-3 col-sm-6 no-padding"> 
- <a href="#" class="services__block-wrap">
-  <div class="services__block">
-   <div class="services__img-wrap">
-     <div class="services__img">
-      <i class="icon-serv3"></i>
-    </div>
-    <div class="services__img-desc">
-     <p>Дизайн</p>
+  <a href="#" class="services__block-wrap">
+   <div class="services__block">
+     <div class="services__img-wrap">
+       <div class="services__img">
+        <i class="icon-serv3"></i>
+      </div>
+      <div class="services__img-desc">
+       <p>Дизайн</p>
+     </div>
    </div>
  </div>
-</div>
 </a>
 <a href="#" class="services__block-wrap">
- <div class="services__block">
+  <div class="services__block">
    <div class="services__img-wrap">
      <div class="services__img">
       <i class="icon-serv7"></i>
@@ -325,7 +322,7 @@
 </div>
 </a>
 <a href="#" class="services__block-wrap">
- <div class="services__block">
+  <div class="services__block">
    <div class="services__img-wrap">
      <div class="services__img">
       <i class="icon-serv11"></i>
@@ -337,7 +334,7 @@
 </div> 
 </a>
 <a href="#" class="services__block-wrap">
-  <div class="services__block">
+ <div class="services__block">
    <div class="services__img-wrap">
      <div class="services__img">
       <i class="icon-serve15"></i>
@@ -350,21 +347,21 @@
 </a>
 </div>
 <div class="col-md-3 col-sm-6 no-padding">
- <a href="#" class="services__block-wrap">
-  <div class="services__block">
-   <div class="services__img-wrap">
-     <div class="services__img">
-      <i class="icon-serv4"></i>
-    </div>
-    <div class="services__img-desc">
-     <p>Разработка <br> протопитов</p>
+  <a href="#" class="services__block-wrap">
+   <div class="services__block">
+     <div class="services__img-wrap">
+       <div class="services__img">
+        <i class="icon-serv4"></i>
+      </div>
+      <div class="services__img-desc">
+       <p>Разработка <br> протопитов</p>
+     </div>
    </div>
  </div>
-</div>
 </a>
 <a href="#" class="services__block-wrap">
- <div class="services__block">
-  <div class="services__img-wrap">
+  <div class="services__block">
+   <div class="services__img-wrap">
     <div class="services__img">
      <i class="icon-serv8"></i>
    </div>
@@ -375,8 +372,8 @@
 </div>
 </a>
 <a href="#" class="services__block-wrap">
- <div class="services__block">
-  <div class="services__img-wrap">
+  <div class="services__block">
+   <div class="services__img-wrap">
     <div class="services__img">
      <i class="icon-serv12"></i>
    </div>
@@ -387,8 +384,8 @@
 </div>
 </a>
 <a href="#" class="services__block-wrap">
- <div class="services__block">
-  <div class="services__img-wrap">
+  <div class="services__block">
+   <div class="services__img-wrap">
     <div class="services__img">
      <i class="icon-serv16"></i>
    </div>
@@ -399,7 +396,6 @@
 </div>
 </a>
 </div>
-<!-- </div> -->
 </div>
 </div>
 <!-- sevices end -->
@@ -411,16 +407,16 @@
       <h2 class="caption">Наши последние проекты</h2>
     </div>
     <div class="lst-project__slider owl-carousel js-slider-second">
-     <a href="#" class="item">
-      <div class="lst-project__img-wrap">
-        <img src="images/last_pr1.png" alt="">
-      </div>
-      <div class="lst-project__hidden-block">
-        <p>ALFA Стоматология</p>
-        <p>seo продвижение</p>
-      </div>
-    </a>          
-    <a href="#" class="item">
+      <div class="item">
+       <div class="lst-project__img-wrap">
+         <img src="images/last_pr1.png" alt="">
+       </div>
+       <div class="lst-project__hidden-block">
+         <p>ALFA Стоматология</p>
+         <p>seo продвижение</p>
+       </div>
+     </div>
+     <div class="item">
       <div class="lst-project__img-wrap">
         <img src="images/last_pr2.png" alt="">
       </div>
@@ -428,8 +424,8 @@
         <p>ПРОМТЕХГАЗ</p>
         <p>seo продвижение</p>
       </div>
-    </a>   
-    <a href="#" class="item">
+    </div>
+    <div class="item">
       <div class="lst-project__img-wrap">
         <img src="images/last_pr3.png" alt="">
       </div>
@@ -437,8 +433,35 @@
        <p>Parfum-Optom.com</p>
        <p>seo продвижение</p>
      </div>
-   </a>   
-   <a href="#" class="item">
+   </div>
+   <div class="item">
+     <div class="lst-project__img-wrap">
+       <img src="images/last_pr1.png" alt="">
+     </div>
+     <div class="lst-project__hidden-block">
+       <p>ALFA Стоматология</p>
+       <p>seo продвижение</p>
+     </div>
+   </div>
+   <div class="item">
+     <div class="lst-project__img-wrap">
+       <img src="images/last_pr2.png" alt="">
+     </div>
+     <div class="lst-project__hidden-block">
+       <p>ПРОМТЕХГАЗ</p>
+       <p>seo продвижение</p>
+     </div>
+   </div>
+   <div class="item">
+     <div class="lst-project__img-wrap">
+       <img src="images/last_pr3.png" alt="">
+     </div>
+     <div class="lst-project__hidden-block">
+      <p>Parfum-Optom.com</p>
+      <p>seo продвижение</p>
+    </div>    
+  </div>
+  <div class="item">
     <div class="lst-project__img-wrap">
       <img src="images/last_pr1.png" alt="">
     </div>
@@ -446,8 +469,8 @@
       <p>ALFA Стоматология</p>
       <p>seo продвижение</p>
     </div>
-  </a>          
-  <a href="#" class="item">
+  </div>
+  <div class="item">
     <div class="lst-project__img-wrap">
       <img src="images/last_pr2.png" alt="">
     </div>
@@ -455,43 +478,16 @@
       <p>ПРОМТЕХГАЗ</p>
       <p>seo продвижение</p>
     </div>
-  </a>   
-  <a href="#" class="item">
+  </div>
+  <div class="item">
     <div class="lst-project__img-wrap">
-      <img src="images/last_pr3.png" alt="">
-    </div>
-    <div class="lst-project__hidden-block">
-     <p>Parfum-Optom.com</p>
-     <p>seo продвижение</p>
+        <img src="images/last_pr3.png" alt="">
+      </div>
+      <div class="lst-project__hidden-block">
+       <p>Parfum-Optom.com</p>
+       <p>seo продвижение</p>
+     </div>
    </div>
- </a>            
- <a href="#" class="item">
-  <div class="lst-project__img-wrap">
-    <img src="images/last_pr1.png" alt="">
-  </div>
-  <div class="lst-project__hidden-block">
-    <p>ALFA Стоматология</p>
-    <p>seo продвижение</p>
-  </div>
-</a>          
-<a href="#" class="item">
-  <div class="lst-project__img-wrap">
-    <img src="images/last_pr2.png" alt="">
-  </div>
-  <div class="lst-project__hidden-block">
-    <p>ПРОМТЕХГАЗ</p>
-    <p>seo продвижение</p>
-  </div>
-</a>   
-<a href="#" class="item">
-  <div class="lst-project__img-wrap">
-    <img src="images/last_pr3.png" alt="">
-  </div>
-  <div class="lst-project__hidden-block">
-   <p>Parfum-Optom.com</p>
-   <p>seo продвижение</p>
- </div>
-</a>          
 </div>
 </div>
 </div>
