--- a/app/advancement.html
+++ b/app/advancement.html
@@ -132,67 +132,143 @@
         </div>
       </div>
     </div>
-    <div class="dev__cycle dev__cycle--bg-advancement">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="dev__step">
-            <div class="dev__wrap dev__wrap--advancement-wrap">
-             <div class="dev__step-img-wrap  dev__step-img-wrap--advancement">
-              <img src="images/icons/advancement1.png" alt="">
+
+    <div class="service__links service__links--dev-links">
+      <div class="col-lg-3 col-md-3 no-padding">
+        <a href="#" class="services__block-wrap">
+          <div class="services__block services__block--dev">
+           <div class="services__img-wrap">
+             <div class="services__img">
+              <img src="images/icons/serv6.png" alt="">
+            </div>
+            <div class="services__img-desc">
+              <p>SEO<br>( продвижение<br>сайта в поисковых<br>системах)</p> 
+              <p class="price"><span>3200 </span>рублей</p>
             </div>
           </div>
-          <div class="dev__advancement">
-            <p>SEO</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+        </div> 
+      </a>
+      <a href="#" class="submit">Отправить заявку</a>
+    </div>
+    <div class="col-lg-3 col-md-3 no-padding">
+      <a href="#" class="services__block-wrap">
+        <div class="services__block services__block--dev">
+         <div class="services__img-wrap">
+           <div class="services__img">
+            <img src="images/icons/serv10.png" alt="">
+          </div>
+          <div class="services__img-desc">
+            <p>Поддержка и  <br>
+              сопровождение <br>
+            сайтов</p>
+            <p class="price"><span>3200 </span>рублей</p>
           </div>
         </div>
+      </div> 
+    </a>
+    <a href="#" class="submit">Отправить заявку</a>
+  </div>
+  <div class="col-lg-3 col-md-3 no-padding">
+    <a href="#" class="services__block-wrap">
+      <div class="services__block services__block--dev">
+       <div class="services__img-wrap">
+         <div class="services__img">
+          <img src="images/icons/serv14.png" alt="">
+        </div>
+        <div class="services__img-desc">
+          <p>Подключение и <br>
+            настройка <br>
+          веб-аналитики</p>
+          <p class="price"><span>3200 </span>рублей</p>
+        </div>
       </div>
-      <div class="col-md-3">
-        <div class="dev__step">
-          <div class="dev__wrap dev__wrap--advancement-wrap">          
-            <div class="dev__step-img-wrap  dev__step-img-wrap--advancement">
-             <img src="images/icons/advancement2.png" alt="">
-           </div>
-         </div>
-         <div class="dev__advancement">
-           <p>Контекстная реклама</p>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
-         </div>
-       </div>      
-     </div>
-     <div class="col-md-3">
-       <div class="dev__step">
-         <div class="dev__wrap dev__wrap--advancement-wrap">
-           <div class="dev__step-img-wrap dev__step-img-wrap--advancement">
-             <img src="images/icons/advancement3.png" alt="">
-           </div>
-         </div>
-         <div class="dev__advancement">
-           <p>Еmail-маркетинг</p>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
-         </div>
+    </div> 
+  </a>
+  <a href="#" class="submit">Отправить заявку</a>
+</div>
+
+<div class="col-lg-3 col-md-3 no-padding">
+  <a href="#" class="services__block-wrap">
+    <div class="services__block services__block--dev">
+     <div class="services__img-wrap">
+       <div class="services__img">
+        <img src="images/icons/serv15.png" alt="">
+      </div>
+      <div class="services__img-desc">
+        <p>Подключение и <br>
+          настройка <br>
+        веб-аналитики</p>
+        <p class="price"><span>3200 </span>рублей</p>
+      </div>
+    </div>
+  </div> 
+</a>
+<a href="#" class="submit">Отправить заявку</a>
+</div>
+
+</div>
+
+<div class="dev__cycle dev__cycle--bg-advancement">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="dev__step">
+        <div class="dev__wrap dev__wrap--advancement-wrap">
+         <div class="dev__step-img-wrap  dev__step-img-wrap--advancement">
+          <img src="images/icons/advancement1.png" alt="">
+        </div>
+      </div>
+      <div class="dev__advancement">
+        <p>SEO</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div class="dev__step">
+      <div class="dev__wrap dev__wrap--advancement-wrap">          
+        <div class="dev__step-img-wrap  dev__step-img-wrap--advancement">
+         <img src="images/icons/advancement2.png" alt="">
        </div>
      </div>
-     <div class="col-md-3">
-       <div class="dev__step dev__step--bg-arrow-adv">
-         <div class="dev__wrap dev__wrap--advancement-wrap">
-           <div class="dev__step-img-wrap dev__step-img-wrap--advancement">
-             <img src="images/icons/advancement4.png" alt="">
-           </div>
-         </div>
-         <div class="dev__advancement">
-           <p>SMM</p>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
-         </div>
+     <div class="dev__advancement">
+       <p>Контекстная реклама</p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+     </div>
+   </div>      
+ </div>
+ <div class="col-md-3">
+   <div class="dev__step">
+     <div class="dev__wrap dev__wrap--advancement-wrap">
+       <div class="dev__step-img-wrap dev__step-img-wrap--advancement">
+         <img src="images/icons/advancement3.png" alt="">
        </div>
+     </div>
+     <div class="dev__advancement">
+       <p>Еmail-маркетинг</p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
      </div>
    </div>
-   <div class="dev__etaps">
-    <span>запуск</span>
-    <span>сталкновление <br> с реальностью</span> 
-    <span>коррекция</span>
-    <span>Вариант жизненного <br> цикла веб сайта</span>
-  </div>
+ </div>
+ <div class="col-md-3">
+   <div class="dev__step dev__step--bg-arrow-adv">
+     <div class="dev__wrap dev__wrap--advancement-wrap">
+       <div class="dev__step-img-wrap dev__step-img-wrap--advancement">
+         <img src="images/icons/advancement4.png" alt="">
+       </div>
+     </div>
+     <div class="dev__advancement">
+       <p>SMM</p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+     </div>
+   </div>
+ </div>
+</div>
+<div class="dev__etaps">
+  <span>запуск</span>
+  <span>сталкновление <br> с реальностью</span> 
+  <span>коррекция</span>
+  <span>Вариант жизненного <br> цикла веб сайта</span>
+</div>
 </div>
 <div class="dev__desc">
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -267,12 +343,12 @@
       <p>действующих контрактов поддержки.</p>
     </div>
   </div>
-   <div class="col-md-3">
-     <div class="dev__create-desc">
-      <p class="dev-caption">Моментальное<br>получение трафика</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
-    </div>
+  <div class="col-md-3">
+   <div class="dev__create-desc">
+    <p class="dev-caption">Моментальное<br>получение трафика</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
   </div>
+</div>
 </div>
 </div>
 <div class="row">
@@ -318,12 +394,12 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
     </div>
   </div>
-   <div class="col-md-3">
-     <div class="dev__create-desc">
-      <p class="dev-caption">Dolor sit<br>amet</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-    </div>
+  <div class="col-md-3">
+   <div class="dev__create-desc">
+    <p class="dev-caption">Dolor sit<br>amet</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
   </div>
+</div>
 </div>
 </div>
 <div class="row">
@@ -370,12 +446,12 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
     </div>
   </div>
-   <div class="col-md-3">
-     <div class="dev__create-desc">
-      <p class="dev-caption">Улучшение<br>позиций</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation laborum.</p>
-    </div>
+  <div class="col-md-3">
+   <div class="dev__create-desc">
+    <p class="dev-caption">Улучшение<br>позиций</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation laborum.</p>
   </div>
+</div>
 </div>
 </div>
 <div class="row">
